--- a/FoodieApplication/frontend/FoodieApplication/src/index.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/index.html
@@ -9,7 +9,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZFCWt0z0bNre0OS04WkLd0xzXslKxXBk&libraries=places&language=en"></script>
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
