--- a/FoodieApplication/frontend/FoodieApplication/src/index.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/index.html
@@ -18,6 +18,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTWohWva6B78H3sl-CDvnk-xfqw68xBiE&libraries=places&language=en"></script> -->
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZFCWt0z0bNre0OS04WkLd0xzXslKxXBk&libraries=places&language=en"></script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZFCWt0z0bNre0OS04WkLd0xzXslKxXBk&libraries=places&language=en"></script>
 </body>
 </html>
